--- a/.github/workflows/fetch-market-data.yml
+++ b/.github/workflows/fetch-market-data.yml
@@ -3,15 +3,15 @@ name: Fetch Market Snapshot
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 1 * * 1-5'
-    - cron: '0 2 * * 1-5'
-    - cron: '30 2 * * 1-5'
-    - cron: '0 3 * * 1-5'
-    - cron: '30 3 * * 1-5'
-    - cron: '30 5 * * 1-5'
-    - cron: '0 6 * * 1-5'
-    - cron: '40 6 * * 1-5'
-    - cron: '0 7 * * 1-5'
+    - cron: '31 1 * * 1-5'
+    - cron: '1 2 * * 1-5'
+    - cron: '31 2 * * 1-5'
+    - cron: '1 3 * * 1-5'
+    - cron: '31 3 * * 1-5'
+    - cron: '31 5 * * 1-5'
+    - cron: '1 6 * * 1-5'
+    - cron: '41 6 * * 1-5'
+    - cron: '1 7 * * 1-5'
 
 jobs:
   fetch:
@@ -42,12 +42,14 @@ jobs:
 
       - name: Commit data snapshot
         run: |
-          if git diff --quiet --exit-code; then
+          if [ -d data ]; then
+            git add data
+          fi
+          if git diff --cached --quiet --exit-code; then
             echo "No changes to commit"
             exit 0
           fi
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add data
           git commit -m "chore: update market snapshot $(date -u +'%%Y-%%m-%%d %%H:%%M UTC')"
           git push
